Examples of Media Queries

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,46 @@
-body
+body{
+    background-color: blanchedalmond;
+}
+
+header{
+    background-color: cornflowerblue;
+}
+
+article{
+    background-color: darkgreen;
+}
+
+aside{
+    background-color: darkolivegreen;
+}
+
+footer{
+    background-color: darkslategrey;
+}
+
+article img {
+    width: 100%;
+    height: auto;
+    max-width: 800px;
+}
+
+/* if the width of screen is smaller than 700px */
+/* Here 700 is one breakpoint */
+@media (max-width: 700px)
 {
-    background-color: chocolate;
+    header{
+        background-color: black;
+    }
+
+    footer{
+        width: 50%;
+    }
+
+}
+
+@media (max-width: 400px){
+    footer{
+        width: 100%;
+        border: 1px solid black;
+    }
 }
